--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -88,12 +88,13 @@ jobs:
       - name: Upload notarized binary
         uses: actions/upload-artifact@v4
         with:
-          name: macos-binaries
+          name: attune-macos-notarized
           path: target/release/attune
 
   publish:
     name: Production build and publish draft release
     runs-on: ubuntu-latest
+    needs: macos-notarize
     steps:
       - uses: actions/checkout@v4
 
