--- a/packages/attune/Cargo.toml
+++ b/packages/attune/Cargo.toml
@@ -50,6 +50,7 @@ tower.workspace = true
 tracing-subscriber.workspace = true
 tracing.workspace = true
 uuid.workspace = true
+http-serde = "2.1.1"
 
 [dev-dependencies]
 async-tempfile.workspace = true
