--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -105,26 +105,68 @@ jobs:
     name: Production build and publish draft release
     runs-on: ubuntu-latest
     needs: macos-notarize
+    env:
+      ATTUNE_DATABASE_URL: postgresql://attune:attune@localhost:5432/attune
+      # These values are from Minio, which is used in integration tests.
+      # We need these environment variables and services to run the tests.
+      AWS_REGION: us-east-1
+      AWS_ACCESS_KEY_ID: attuneminio
+      AWS_SECRET_ACCESS_KEY: attuneminio
+      AWS_ENDPOINT_URL_S3: http://localhost:9000
+    services:
+      postgres:
+        image: postgres:17.4-bookworm
+        env:
+          POSTGRES_USER: attune
+          POSTGRES_PASSWORD: attune
+          POSTGRES_DB: attune
+        ports:
+          - "5432:5432"
+      minio:
+        image: ghcr.io/attunehq/minio:latest@sha256:d816cb5feed54cbf1789b5cf0ed93fc7cf99809bb1018cf6781275bdc6e5e7ef
+        env:
+          MINIO_ROOT_USER: attuneminio
+          MINIO_ROOT_PASSWORD: attuneminio
+          MINIO_DOMAIN: localhost
+        ports:
+          - "9000:9000"
+        volumes:
+          - "/tmp/minio-data:/data"
     steps:
-      - uses: actions/checkout@v4
-
+      
       # Build and test binaries.
       - name: Install Rust
         run: rustup show
 
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libgpg-error-dev libgpgme-dev pkg-config
+      
+      - name: Create MinIO bucket
+        run: mkdir -p /tmp/minio-data/attune-dev-0
+      
+      - uses: actions/checkout@v4
+        with:
+          lfs: true
+
       - name: Remove empty EE crate
         run: rm -r ./packages/attune-ee
-
+      
       - name: Cache cargo
         uses: Swatinem/rust-cache@v2.8.0
         with:
           cache-workspace-crates: true
           cache-all-crates: true
 
-      - name: Install system dependencies
+      - name: Migrate and check database
+        working-directory: ./docker/migrate
         run: |
-          sudo apt-get update
-          sudo apt-get install -y libgpg-error-dev libgpgme-dev pkg-config
+          npm install
+          npm run build
+          npm run fmt:check
+          npm run migrate
+          npm run diff
 
       - name: Build binaries
         run: cargo build --workspace --all-targets --all-features --release
