test: Concurrent end-to-end uploads and installation (#132)
* Add e2e tests

* Fix PR comments

* Address rest of PR comments

* Add repo clean up functions at the end so tests can be run as many times as needed without resetting services

* Comment out some PR checks in order to verify smoke tests in CI

* Add debug code in pr.yml to figure out why CI is hanging at the start services step

* Add tmate session to debug docker compose up problem

* Remove tmate and run smoke test in CI

* Add tmate for debugging

* Remove tmate and add required system deps

* Add other CI jobs back

* Add apt install test, this should work in CI and locally

* Remove db step from pr.yml

* Fix index generation by arch (#105)

* refactor: Remove unused code (#109)

* Reject invalid component names (#112)

* Fix dockerfile (#115)

* fix: Duplicate packages shouldn't duplicate `Packages` index entries (#110)

* fix: Re-adding package shouldn't dupe index entry

* cr: Run formatter

* ci: Update sqlx

* ci: Update sqlx test query

* cr: Address comments

* ci: Run clippy

* Install mc as required by smoke tests

* Fix pr.yml

* Add tmate to debug gpg key permissions issue in ci

* Add concurrent upload test (have not tested in CI)

* Tried to implement with GenericBuildableImage

* Replaced testcontainers with bollards

* Remove tmate from workflow and fix formatting

* refactor: Combine integration test crates

* test: Rework E2E test with realistic concurrency

* ci: Set up integration test env

* feat: E2E test works locally

* ci: Formatter

* ci: Update main test config

* cr: Address comments

* refactor: Correctly handle signals in Minio container

* cr: Address comments

* ci: Fix test flags and permissions

* ci: Command execution should be loud for debugging

* fix: Unwrap should succeed on non-zero exec

* fix: Read .env in integration test

* ci: Force parallelism even in single core

* fix: Distinguish gpgme errors

* fix: Duplicate package uploads should be a no-op

* ci: U

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -90,6 +90,7 @@ jobs:
         with:
           cache-workspace-crates: true
           cache-all-crates: true
+          cache-on-failure: true
 
       - name: Migrate database
         working-directory: ./docker/migrate
@@ -98,6 +99,9 @@ jobs:
           npm run migrate
           npm run diff
 
+      # We can't run the E2E test in the same job that we run the unit tests,
+      # because the E2E tests bring up their own Docker Compose service
+      # dependencies that will clash with the job's service containers.
       - name: Run tests
         run: cargo test --workspace --all-targets --all-features --release
 
