--- a/docker/attune/Dockerfile
+++ b/docker/attune/Dockerfile
@@ -11,16 +11,20 @@ RUN cargo build --release
 RUN rm -f packages/attune/src/main.rs && rm -f packages/attune-macros/src/lib.rs
 COPY ./.sqlx ./.sqlx
 COPY ./packages ./packages
+# This is just a gimmick of our testing libraries. Check out
+# `attune::testing::fixtures` for more details.
+COPY ./scripts/fixtures ./scripts/fixtures
 RUN cargo build --release --bin attune-server
 
 FROM debian:bookworm-slim AS runtime
 
 RUN apt-get update
-RUN apt-get install -y --no-install-recommends libssl3 ca-certificates libgpg-error0 libgpgme11 && rm -rf /var/lib/apt/lists/*
+RUN apt-get install -y --no-install-recommends libssl3 ca-certificates libgpg-error0 libgpgme11 curl && rm -rf /var/lib/apt/lists/*
 
 COPY --from=build /target/release/attune-server /usr/local/bin/attune-server
 
 USER 1000:1000
 
 ENV RUST_LOG=attune_server=debug,attune=debug
+HEALTHCHECK --interval=1s --timeout=5s CMD curl -f http://localhost:3000/api/v0/health
 ENTRYPOINT ["attune-server"]
