--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -197,33 +197,4 @@ jobs:
           generate_release_notes: true
           files: /tmp/release/*
 
-      # Publish Docker image.
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Extract metadata (tags, labels) for Docker
-        id: docker-metadata
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-
-      - name: Build and push Docker image
-        id: docker-build-and-push
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          file: ./docker/attune/Dockerfile
-          push: true
-          tags: ${{ steps.docker-metadata.outputs.tags }}
-          labels: ${{ steps.docker-metadata.outputs.labels }}
-
-      - name: Generate artifact attestation
-        uses: actions/attest-build-provenance@v2
-        with:
-          subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          subject-digest: ${{ steps.docker-build-and-push.outputs.digest }}
-          push-to-registry: true
+# Removed Docker image publishing. We'll publish Docker images manually for now.
