--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -13,16 +13,21 @@ on:
       - "**/.gitignore"
       - "**/LICENSE"
   workflow_dispatch:
+    inputs:
+      releaseName:
+        description: "Release name"
+        required: true
+        type: string
 
 env:
   CARGO_TERM_COLOR: always
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
+  RELEASE_NAME: ${{ inputs.releaseName || github.ref_name }}
 
 jobs:
   macos-notarize:
     name: Build and notarize Attune CLI macOS binary
-    runs-on: macos-latest # macOS 14 ARM64
+    runs-on: macos-latest
     steps:
       - uses: actions/checkout@v4
 
@@ -57,11 +62,12 @@ jobs:
           security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k "$APPLE_CERTIFICATE_PASSWORD" $RUNNER_TEMP/build.keychain
           rm $RUNNER_TEMP/certificate.p12
 
-      # We include the com.apple.security.cs.disable-library-validation entitlement
-      # because attune dynamically loads libgpgme from Homebrew (/opt/homebrew/...).
-      # Without this, Hardened Runtime's library validation would reject the dylib
-      # since it's signed with a different Team ID. This entitlement allows the app
-      # to load third-party signed libraries while still enabling Hardened Runtime.
+      # We include the com.apple.security.cs.disable-library-validation
+      # entitlement because attune dynamically loads libgpgme from Homebrew
+      # (/opt/homebrew/...). Without this, Hardened Runtime's library validation
+      # would reject the dylib since it's signed with a different Team ID. This
+      # entitlement allows the app to load third-party signed libraries while
+      # still enabling Hardened Runtime.
       - name: Sign binary
         env:
           APPLE_DEVELOPER_ID: ${{ secrets.APPLE_DEVELOPER_ID }}
@@ -132,8 +138,12 @@ jobs:
           - "9000:9000"
         volumes:
           - "/tmp/minio-data:/data"
+    permissions:
+      contents: write
+      packages: write
+      id-token: write
+      attestations: write
     steps:
-      
       # Build and test binaries.
       - name: Install Rust
         run: rustup show
@@ -142,22 +152,23 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y libgpg-error-dev libgpgme-dev pkg-config
-      
+
       - name: Create MinIO bucket
         run: mkdir -p /tmp/minio-data/attune-dev-0
-      
+
       - uses: actions/checkout@v4
         with:
           lfs: true
 
       - name: Remove empty EE crate
         run: rm -r ./packages/attune-ee
-      
+
       - name: Cache cargo
         uses: Swatinem/rust-cache@v2.8.0
         with:
           cache-workspace-crates: true
           cache-all-crates: true
+          cache-on-failure: true
 
       - name: Migrate and check database
         working-directory: ./docker/migrate
@@ -185,9 +196,9 @@ jobs:
       - name: Copy and rename release assets
         run: |
           mkdir -p /tmp/release
-          cp target/release/attune /tmp/release/attune-${{ github.ref_name }}_${{ runner.os }}-${{ runner.arch }}
-          cp target/release/attune-server /tmp/release/attune-server-${{ github.ref_name }}_${{ runner.os }}-${{ runner.arch }}
-          cp /tmp/macos-binary/attune /tmp/release/attune-${{ github.ref_name }}_macOS-ARM64
+          cp target/release/attune /tmp/release/attune-${{ env.RELEASE_NAME }}_${{ runner.os }}-${{ runner.arch }}
+          cp /tmp/macos-binary/attune /tmp/release/attune-${{ env.RELEASE_NAME }}_macOS-ARM64
+          cp target/release/attune-server /tmp/release/attune-server-${{ env.RELEASE_NAME }}_${{ runner.os }}-${{ runner.arch }}
 
       - name: Upload release assets
         uses: softprops/action-gh-release@v2
@@ -205,25 +216,88 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      # TODO: Parallelize these Docker builds?
+
       - name: Extract metadata (tags, labels) for Docker
-        id: docker-metadata
+        id: docker-metadata-attune
         uses: docker/metadata-action@v5
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-
-      - name: Build and push Docker image
-        id: docker-build-and-push
+          images: ${{ env.REGISTRY }}/${{ github.repository_owner }}/attune
+      - name: Build and push control plane image
+        id: docker-build-and-push-attune
         uses: docker/build-push-action@v6
         with:
           context: .
           file: ./docker/attune/Dockerfile
           push: true
-          tags: ${{ steps.docker-metadata.outputs.tags }}
-          labels: ${{ steps.docker-metadata.outputs.labels }}
-
+          tags: ${{ steps.docker-metadata-attune.outputs.tags }}
+          labels: ${{ steps.docker-metadata-attune.outputs.labels }}
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v2
         with:
-          subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          subject-digest: ${{ steps.docker-build-and-push.outputs.digest }}
+          subject-name: ${{ env.REGISTRY }}/${{ github.repository_owner }}/attune
+          subject-digest: ${{ steps.docker-build-and-push-attune.outputs.digest }}
+          push-to-registry: true
+
+      - name: Extract metadata (tags, labels) for Docker
+        id: docker-metadata-migrate
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ github.repository_owner }}/migrate
+      - name: Build and push migration image
+        id: docker-build-and-push-migrate
+        uses: docker/build-push-action@v6
+        with:
+          context: ./docker/migrate
+          push: true
+          tags: ${{ steps.docker-metadata-migrate.outputs.tags }}
+          labels: ${{ steps.docker-metadata-migrate.outputs.labels }}
+      - name: Generate artifact attestation
+        uses: actions/attest-build-provenance@v2
+        with:
+          subject-name: ${{ env.REGISTRY }}/${{ github.repository_owner }}/migrate
+          subject-digest: ${{ steps.docker-build-and-push-migrate.outputs.digest }}
+          push-to-registry: true
+
+      - name: Extract metadata (tags, labels) for Docker
+        id: docker-metadata-minio
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ github.repository_owner }}/minio
+      - name: Build and push development Minio image
+        id: docker-build-and-push-minio
+        uses: docker/build-push-action@v6
+        with:
+          context: ./docker/minio
+          push: true
+          tags: ${{ steps.docker-metadata-minio.outputs.tags }}
+          labels: ${{ steps.docker-metadata-minio.outputs.labels }}
+      - name: Generate artifact attestation
+        uses: actions/attest-build-provenance@v2
+        with:
+          subject-name: ${{ env.REGISTRY }}/${{ github.repository_owner }}/minio
+          subject-digest: ${{ steps.docker-build-and-push-minio.outputs.digest }}
+          push-to-registry: true
+
+      - name: Extract metadata (tags, labels) for Docker
+        id: docker-metadata-testinstall
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ github.repository_owner }}/testinstall
+      - name: Build and push development test installation image
+        id: docker-build-and-push-testinstall
+        uses: docker/build-push-action@v6
+        with:
+          context: ./docker/testinstall
+          push: true
+          tags: ${{ steps.docker-metadata-testinstall.outputs.tags }}
+          labels: ${{ steps.docker-metadata-testinstall.outputs.labels }}
+      - name: Generate artifact attestation
+        uses: actions/attest-build-provenance@v2
+        with:
+          subject-name: ${{ env.REGISTRY }}/${{ github.repository_owner }}/testinstall
+          subject-digest: ${{ steps.docker-build-and-push-testinstall.outputs.digest }}
           push-to-registry: true
