--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -19,6 +19,10 @@ on:
         required: true
         type: string
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: true
+
 env:
   CARGO_TERM_COLOR: always
   REGISTRY: ghcr.io
@@ -139,9 +143,13 @@ jobs:
         volumes:
           - "/tmp/minio-data:/data"
     permissions:
+      # Required to create GitHub Release.
       contents: write
+      # Required for uploading to GHCR.
       packages: write
+      # Required for actions/attest-build-provenance.
       id-token: write
+      # Required for actions/attest-build-provenance.
       attestations: write
     steps:
       # Build and test binaries.
