--- a/packages/attune/Cargo.toml
+++ b/packages/attune/Cargo.toml
@@ -66,3 +66,4 @@ testcontainers.workspace = true
 tokio-util.workspace = true
 workspace_root.workspace = true
 xshell.workspace = true
+test-with = "0.15.4"
